--- a/Index.html
+++ b/Index.html
@@ -3,6 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <script src="scripts/index.js" defer></script>
     <title>Birds I Need</title>
     <style>
         body {
@@ -38,27 +39,6 @@
 <div id="spreadsheetData"></div>
 
 </body>
-  <script>
-    // Replace this with your spreadsheet's URL in the JSON format
-    const SPREADSHEET_URL = 'https://spreadsheets.google.com/feeds/list/YOUR_SPREADSHEET_ID/od6/public/values?alt=json';
-
-    // Function to fetch spreadsheet data
-    function fetchSpreadsheetData() {
-        fetch(SPREADSHEET_URL)
-            .then(response => response.json())
-            .then(data => {
-                // For demonstration purposes, just stringify the data and display it.
-                // In a real application, you'd want to process and display this data more thoughtfully.
-                document.getElementById('spreadsheetData').innerText = JSON.stringify(data, null, 2);
-            })
-            .catch(error => {
-                console.error('Error fetching spreadsheet data:', error);
-                document.getElementById('spreadsheetData').innerText = 'Error fetching data. See console for details.';
-            });
-    }
-
-    // Fetch data when the page loads
-    window.addEventListener('load', fetchSpreadsheetData);
-</script>
+  
 
 </html>
