--- a/Index.html
+++ b/Index.html
@@ -3,28 +3,11 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+
     <script src="scripts/index.js" defer></script>
+    <link rel="stylesheet" href="styles/index.css">
+    
     <title>Birds I Need</title>
-    <style>
-        body {
-            font-family: Arial, sans-serif;
-            margin: 0;
-            padding: 0;
-        }
-
-        header {
-            background-color: #4CAF50;
-            color: white;
-            text-align: center;
-            padding: 10px 0;
-        }
-
-        #map {
-            width: 100%;
-            height: 400px; /* You can adjust this as needed */
-            background-color: #ccc; /* Gray background to show the div before the map loads */
-        }
-    </style>
 </head>
 <body>
 
