updates and fixes

--- a/Index.html
+++ b/Index.html
@@ -21,6 +21,10 @@
 <!-- <script src="https://maps.googleapis.com/maps/api/js?key=YOUR_API_KEY&callback=initMap" async defer></script> -->
 <div id="spreadsheetData"></div>
 
+
+<div id="dataDisplay"></div>
+
+
 </body>
   
 
