--- a/Index.html
+++ b/Index.html
@@ -15,10 +15,11 @@
     Birds I Need
 </header>
 
-<div id="map"></div>
+<div id="map" style="height: 500px; width: 100%;"></div>
+
 
 <!-- Include Google Maps JavaScript API (if needed) -->
-<!-- <script src="https://maps.googleapis.com/maps/api/js?key=YOUR_API_KEY&callback=initMap" async defer></script> -->
+<script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyBo7Os17LiQygrHtTNxzm6f3fBxtzG7d1Q&callback=initMap" async defer></script>
 <div id="spreadsheetData"></div>
 
 
