--- a/index.html
+++ b/index.html
@@ -23,6 +23,9 @@
     <input type="radio" id="Timothy" name="user" value="Timothy">
     <label for="Timothy">Timothy</label>
 </div>
+<label for="distanceSlider">Distance from Center:</label>
+<input type="range" id="distanceSlider" name="distanceSlider" min="5" max="50" value="50">
+
 
 </header>
 
@@ -30,7 +33,15 @@
 
 
 <!-- Include Google Maps JavaScript API (if needed) -->
-<script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyBo7Os17LiQygrHtTNxzm6f3fBxtzG7d1Q&callback=initMap" async defer></script>
+<!--<script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyBo7Os17LiQygrHtTNxzm6f3fBxtzG7d1Q&callback=initMap" async defer></script>-->
+<script>
+    (g=>{var h,a,k,p="The Google Maps JavaScript API",c="google",l="importLibrary",q="__ib__",m=document,b=window;b=b[c]||(b[c]={});var d=b.maps||(b.maps={}),r=new Set,e=new URLSearchParams,u=()=>h||(h=new Promise(async(f,n)=>{await (a=m.createElement("script"));e.set("libraries",[...r]+"");for(k in g)e.set(k.replace(/[A-Z]/g,t=>"_"+t[0].toLowerCase()),g[k]);e.set("callback",c+".maps."+q);a.src=`https://maps.${c}apis.com/maps/api/js?`+e;d[q]=f;a.onerror=()=>h=n(Error(p+" could not load."));a.nonce=m.querySelector("script[nonce]")?.nonce||"";m.head.append(a)}));d[l]?console.warn(p+" only loads once. Ignoring:",g):d[l]=(f,...n)=>r.add(f)&&u().then(()=>d[l](f,...n))})({
+      key: "AIzaSyCbFJuTEWsJuUjuChIc9Jua3FgsYJZJ4y8",
+      v: "weekly",
+      // Use the 'v' parameter to indicate the version to use (weekly, beta, alpha, etc.).
+      // Add other bootstrap parameters as needed, using camel case.
+    });
+  </script>
 <div id="spreadsheetData"></div>
 
 
